# alife

./: .gitignore  README.md  cell.py  cell_array.py  cell_neighborhood.py  cell_rule.py  main.py
byl/: main.py
generic/: cell.py  cell_array.py  cell_drawer.py  cell_rule.py
langton/: cell.py  cell_array.py  cell_drawer.py  cell_neighborhood.py  cell_rule.py  main.py
res/: byl_array.txt  byl_rule.txt  evoloop_array.txt  evoloop_rule.txt  langton_ant_array.txt  langton_ant_rule.txt  langton_array.txt  langton_rule.txt  reggia_array.txt  reggia_rule.txt
src/: CMakeLists.txt  graph.h  neural_network.c  turtle.c
src/animats/ants/: ant.c  ant.h  ants.c
src/animats/boids/: bird.c  bird.h  boids.c
src/bricalife/: atom.c  atom.h  bricalife.c
src/byl/: byl.c
src/c/: CMakeLists.txt  array.h  cell_array.c  cell_array.h  cell_neighborhood.h  graph.c  graph.h  ipd.c  ipd_rule.c  ipd_rule.h  ipd_state.c  l_systems.c  neural_network.c  neural_network.h  spiral.c  spiral_rule.c  spiral_rule.h  test.c  tools.c  tools.h  turtle.c  turtle.h
src/c/mais/: agent.c  agent.h  mais.c  world.c  world.h
src/cellular_automata/: CMakeLists.txt  ca.c  config.h
src/cellular_automata/byl/: CMakeLists.txt  byl.c
src/cellular_automata/evoloop/: evoloop.c
src/cellular_automata/game_of_life/: CMakeLists.txt  game_of_life.c
src/cellular_automata/ipd/: ipd.c  ipd_rule.c  ipd_rule.h  ipd_state.c  ipd_state.h
src/cellular_automata/langton/: CMakeLists.txt  langton.c
src/cellular_automata/langton_ant/: CMakeLists.txt  langton_ant.c
src/cellular_automata/langton_loop/: CMakeLists.txt  langton.c
src/cellular_automata/spiral/: spiral.c  spiral_rule.c  spiral_rule.h
src/cmake/modules/: FindSDL2_gfx.cmake  FindSDL2_image.cmake
src/extra/ants/: ant.c  ant.h  ants.c
src/extra/boids/: bird.c  bird.h  boids.c
src/extra/johnnyvon/: codon.c  codon.h  johnnyvon.c
src/extra/mais/: agent.c  mais.c  neural_network.c  neural_network.h  world.c
src/ipd/: ipd.c  ipd_rule.c  ipd_rule.h  ipd_state.c
src/l_systems/: l_systems.c
src/langton/: langton.c
src/main/byl/: byl.c
src/main/evoloop/: evoloop.c
src/main/ipd/: ipd.c  ipd_rule.c  ipd_rule.h
src/main/johnnyvon/: codon.c  codon.h  johnnyvon.c
src/main/langton/: langton.c
src/main/reggia/: reggia.c  state.c  state.h  texture.c  texture.h
src/main/spiral/: spiral.c  spiral_rule.h
src/mais/: agent.c  mais.c  world.c
src/morphogonesis/l_systems/: l_systems.c  stochastic_l_systems.c  turtle.c  turtle.h
src/projects/bricalife/: atom.c  atom.h  bricalife.c
src/projects/mais/: mais.c  world.c  world.h
src/py/byl/: array.txt  cell_state.py  main.py
src/py/generic/: cell_array.py  cell_drawer.py  cell_ex_neighborhood.py  cell_neighborhood.py  cell_rule.py
src/py/langton/: array.txt  cell_state.py  main.py  rule.txt
src/py/spiral/: cell_rule.py  main.py
src/py/vonneumann/: cell.py  cell_array.py  cell_rule.py  cell_state.py  main.py
src/spiral/: spiral.c  spiral_rule.c  spiral_rule.h
src/swarm/: CMakeLists.txt
src/swarm/boids/: CMakeLists.txt  bird.h  boids.c
src/tools/: array.c  array.h  cell_array.c  cell_array.h  cell_array_drawer.c  cell_array_drawer.h  cell_array_rule.c  cell_array_rule.h  cell_array_terminal_drawer.c  cell_array_terminal_drawer.h  cell_neighborhood.h  g_cell_array.c  g_cell_array.h  graph.c  graph.h  image.c  image.h  neural_network.c  neural_network.h  tools.c  tools.h  window.c  window.h
src_py/py/byl/: rule.txt
