cmake_minimum_required(VERSION 3.16)
project(alife C)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
message(STATUS "module path ${CMAKE_MODULE_PATH}")

find_package(SDL2 REQUIRED SDL2)
find_package(SDL2_gfx REQUIRED)
find_package(SDL2_image REQUIRED)

set(CMAKE_C_STANDARD 11)

add_executable(langton main/langton/langton.c tools/cell_array.c tools/tools.c)
add_executable(byl main/byl/byl.c tools/cell_array.c tools/tools.c)
add_executable(reggia main/reggia/reggia.c tools/tools.c main/reggia/state.c main/reggia/state.h tools/g_cell_array.c tools/g_cell_array.h main/reggia/texture.c main/reggia/texture.h)
add_executable(evoloop main/evoloop/evoloop.c tools/cell_array.c tools/tools.c)
add_executable(spiral main/spiral/spiral.c tools/cell_array.c main/spiral/spiral_rule.c tools/tools.c)
add_executable(ipd main/ipd/ipd.c tools/cell_array.c main/ipd/ipd_rule.c main/ipd/ipd.c main/ipd/ipd_state.c tools/tools.c)
add_executable(l_systems extra/l_systems/l_systems.c extra/l_systems/turtle.c tools/tools.c)
add_executable(stochastic_l_systems extra/l_systems/stochastic_l_systems.c extra/l_systems/turtle.c tools/tools.c)
add_executable(mais extra/mais/mais.c extra/mais/agent.c extra/mais/world.c tools/graph.c tools/array.c extra/mais/neural_network.c tools/tools.c)
add_executable(johnnyvon extra/johnnyvon/johnnyvon.c tools/tools.c extra/johnnyvon/codon.c extra/johnnyvon/codon.h)
add_executable(boids extra/boids/boids.c tools/tools.c extra/boids/bird.c extra/boids/bird.h)
add_executable(ants extra/ants/ants.c tools/tools.c extra/ants/ant.c extra/ants/ant.h)

target_link_libraries(langton ${SDL2_LIBRARIES})
target_link_libraries(byl ${SDL2_LIBRARIES})
target_link_libraries(reggia ${SDL2_LIBRARIES})
target_link_libraries(evoloop ${SDL2_LIBRARIES})
target_link_libraries(ipd ${SDL2_LIBRARIES})
target_link_libraries(spiral ${SDL2_LIBRARIES})
target_link_libraries(l_systems ${SDL2_LIBRARIES} m)
target_link_libraries(stochastic_l_systems ${SDL2_LIBRARIES} m)
target_link_libraries(mais ${SDL2_LIBRARIES} m)
target_link_libraries(johnnyvon ${SDL2_LIBRARIES} m)
target_link_libraries(boids ${SDL2_LIBRARIES} ${SDL2_GFX_LIBRARIES} m)
target_link_libraries(ants ${SDL2_LIBRARIES} ${SDL2_GFX_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} m)
